# CppMicroServices

compendium/: CMakeLists.txt
compendium/LogService/include/cppmicroservices/logservice/: LoggerFactory.hpp
compendium/LogServiceImpl/src/: Activator.cpp  LogServiceImpl.cpp  LoggerFactoryImpl.cpp  LoggerFactoryImpl.hpp  LoggerImpl.cpp
compendium/LogServiceImpl/test/: TestLogService.cpp
compendium/LoggerFactory/: CMakeLists.txt
compendium/LoggerFactory/include/cppmicroservices/logger/: FormatterLogger.hpp  Logger.hpp  LoggerFactory.hpp
compendium/LoggerFactory/include/cppmicroservices/logservice/: LogService.hpp
compendium/LoggerFactoryImpl/: CMakeLists.txt
compendium/LoggerFactoryImpl/resources/: manifest.json.in
compendium/LoggerFactoryImpl/src/: Activator.cpp  FormatterLoggerImpl.cpp  FormatterLoggerImpl.hpp  LogServiceImpl.cpp  LogServiceImpl.hpp  LoggerFactoryImpl.cpp  LoggerFactoryImpl.hpp  LoggerImpl.cpp  LoggerImpl.hpp
compendium/LoggerFactoryImpl/test/: CMakeLists.txt  TestLogService.cpp  TestLoggerFactory.cpp  TestingConfig.h.in
